# R-Type

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeCommand.md  CMakeLists.txt  WINDOWS_BUILD.md  toolchain-windows.cmake  windows_build_mingz-w64.sh
.github/: self-hosted-runner.md
.github/workflows/: build.yml  ci.yml  mirror.yml
Builder/Linux/: linux_buid.sh
Builder/Windows/: windows_build_mingz-w64.sh  windows_build_wsl.sh
client/: main.cpp
cmake/: toolchain-mingw.cmake
scripts/: check-workflows.sh
server/: main.cpp
